--- a/consulting.html
+++ b/consulting.html
@@ -39,10 +39,51 @@
         .item-label strong { color: #1f2937; font-weight: 600; }
         @media print { body { background: white; padding: 0; } .section-content { max-height: none !important; padding: 30px !important; } .section { page-break-inside: avoid; } .section-header { background: #00a9a5 !important; } }
         @media (max-width: 768px) { .content { padding: 30px 25px; } .header { padding: 40px 30px; } .header h1 { font-size: 2em; } }
+        .breadcrumb {
+    background: white;
+    padding: 16px 24px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-size: 0.95em;
+    flex-wrap: wrap;
+}
+
+.breadcrumb a {
+    color: #00a9a5;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.2s ease;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.breadcrumb a:hover {
+    color: #ff6b9d;
+}
+
+.breadcrumb-separator {
+    color: #cbd5e1;
+    font-weight: 300;
+}
+
+.breadcrumb-current {
+    color: #64748b;
+    font-weight: 600;
+}
     </style>
 </head>
 <body>
     <div class="container">
+        <nav class="breadcrumb">
+      <a href="index.html">🏠 Hub</a>
+      <span class="breadcrumb-separator">›</span>
+      <span class="breadcrumb-current">Consulting</span>
+        </nav>
         <div class="header">
             <div class="header-content">
                 <h1>Consulting Team</h1>
