--- a/testing.html
+++ b/testing.html
@@ -257,10 +257,45 @@
                 font-size: 2em;
             }
         }
+        .breadcrumb {
+    background: white;
+    padding: 16px 24px;
+    border-radius: 12px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-size: 0.95em;
+    position: sticky;
+    top: 12px;
+    z-index: 100;
+}
+
+.breadcrumb a {
+    color: #00a9a5;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.2s ease;
+}
+
+.breadcrumb a:hover {
+    color: #ff6b9d;
+}
+
+.breadcrumb-separator {
+    color: #cbd5e1;
+}
+
+.breadcrumb-current {
+    color: #64748b;
+    font-weight: 600;
+}
     </style>
 </head>
 <body>
     <div class="container">
+        <nav class="breadcrumb"><a href="index.html">🏠 Hub</a><span class="breadcrumb-separator">›</span><span class="breadcrumb-current">Testing</span></nav>
         <div class="header">
             <div class="header-content">
                 <h1>Testing Team</h1>
