--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
         }
         
         .dept-link::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 4px;
-            background: var(--dept-color);
-        }
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: linear-gradient(135deg, #00a9a5 0%, #0d7377 50%, #ff6b9d 100%);
+}
         
         .dept-link:hover {
             background: white;
