--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <h2>Explore</h2>
             
             <a href="team-connections.html" class="featured-link">
-                <h3>🔗 See How Teams Connect</h3>
+                <h3>🔗 Win Together - Better Together</h3>
                 <p>Interactive visualisation showing how all 12 departments collaborate and support each other.</p>
             </a>
             
