--- a/product.html
+++ b/product.html
@@ -221,7 +221,7 @@
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Feature request tracking</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Product documentation ownership</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">UI/UX resource allocation</div></div></div>
-                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Analytics ownership beyond Pendo</div></div></div>
+                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Strengthen analytics beyond Pendo</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Beta testing coordination</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Both Product and Engineering make technical decisions</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Both Product and Marketing communicate product updates</div></div></div>
