--- a/professional-services.html
+++ b/professional-services.html
@@ -214,7 +214,7 @@
                     <span class="collapse-icon">▼</span>
                 </div>
                 <div class="section-content collapsed">
-                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Unclear handover from Sales</div></div></div>
+                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Strengthening transition from sales</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Post-implementation support period</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Ongoing training responsibility</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Client data quality issues</div></div></div>
