--- a/sales.html
+++ b/sales.html
@@ -216,7 +216,7 @@
                     <span class="collapse-icon">▼</span>
                 </div>
                 <div class="section-content collapsed">
-                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Unclear handover process to Professional Services</div></div></div>
+                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Strengthening sales for professional services continuity</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Demo environment ownership</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Post-sale support expectations</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Pricing authority</div></div></div>
