--- a/engineering.html
+++ b/engineering.html
@@ -147,6 +147,8 @@
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Managing technical debt and system performance</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Providing production support and incident response</div></div></div>
                     <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Collaborating with Product on technical feasibility assessments</div></div></div>
+                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Working together with Product on maintaining and enhancing 3rd party integrations</div></div></div>
+                    <div class="responsibility-item"><div class="item-wrapper"><div class="bullet"></div><div class="item-label">Working together with Product and First Line Support to address any live system bugs and provide a prompt resolution</div></div></div>
                 </div>
             </div>
 
