--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ var searchData = [
     { dept: 'Product', color: '#00a9a5', link: 'product.html', text: 'Support - Initial customer query handling and triage' },
     { dept: 'Product', color: '#00a9a5', link: 'product.html', text: 'Support - Basic troubleshooting and issue resolution' },
     { dept: 'Product', color: '#00a9a5', link: 'product.html', text: 'Support - Knowledge Base Management' },    
-    
+    { dept: 'Product', color: '#00a9a5', link: 'product.html', text: 'Integration - acting as a point of escalation of major integration outages' },
     
     // Professional Services
     { dept: 'Professional Services', color: '#f7941d', link: 'professional-services.html', text: 'Client onboarding and implementation' },
