--- a/team-connections.html
+++ b/team-connections.html
@@ -515,9 +515,9 @@ var departments = [
 
 var interactions = [
     { from: 'consulting', to: 'sales', desc: 'We supply Sales with ROI calculations, labour cost saving examples, and productivity improvement case studies to help them demonstrate tangible value during prospect conversations' },
-    { from: 'consulting', to: 'marketing', desc: 'We collaborate on thought leadership content, sharing operational excellence insights and customer success metrics that showcase our expertise in workforce optimisation' },
     { from: 'consulting', to: 'customer-success', desc: 'We provide strategic advice and best practice recommendations for client accounts, helping Customer Success deliver ongoing value to existing customers' },
     { from: 'consulting', to: 'product', desc: 'We share operational insights, feature usage patterns, and workflow improvement ideas based on what we learn from client engagements' },
+    { from: 'consulting', to: 'marketing', desc: 'We collaborate on thought leadership content, sharing operational excellence insights and customer success metrics that showcase our expertise in workforce optimisation' },
     { from: 'customer-success', to: 'product', desc: 'We channel feature requests from clients, provide usage feedback, and help prioritise enhancements based on customer needs and pain points' },
     { from: 'customer-success', to: 'engineering', desc: 'We report bugs with detailed reproduction steps, assess impact on clients, and coordinate resolution timelines for live system issues' },
     { from: 'customer-success', to: 'consulting', desc: 'We identify and qualify opportunities for consulting engagements with existing clients who could benefit from deeper workforce optimisation support' },
@@ -525,14 +525,15 @@ var interactions = [
     { from: 'customer-success', to: 'marketing', desc: 'We help source customer testimonials, facilitate case study interviews, and share success stories for marketing campaigns' },
     { from: 'customer-success', to: 'finance', desc: 'We provide renewal forecasts, flag churn risk indicators, and share revenue retention projections for financial planning' },
     { from: 'customer-success', to: 'prof-services', desc: 'We give feedback on onboarding quality and handover effectiveness to help improve the implementation experience for future clients' },
+    { from: 'customer-success', to: 'infrastructure', desc: 'We maintain system stability and uptime, ensuring clients have a reliable platform that supports their operations' },
     { from: 'engineering', to: 'product', desc: 'We provide technical feasibility assessments, effort estimates for proposed features, and advise on implementation approaches' },
     { from: 'engineering', to: 'customer-success', desc: 'We deliver bug fixes, maintain system stability, and resolve live issues promptly to ensure clients have a reliable platform' },
     { from: 'engineering', to: 'prof-services', desc: 'We provide technical support during client onboarding, fix bugs discovered during implementation, and ensure system stability for go-lives' },
     { from: 'engineering', to: 'payroll', desc: 'We ensure accurate data extraction, fix payroll-impacting bugs as priority, and maintain the reliability of data flows' },
     { from: 'engineering', to: 'testing', desc: 'We deploy code for testing, implement bug fixes, and work closely with testers to validate features before release' },
     { from: 'engineering', to: 'infrastructure', desc: 'We specify deployment requirements, collaborate on system architecture, and coordinate on performance optimisation' },
-    { from: 'engineering', to: 'sales', desc: 'We maintain stable demo environments, provide technical validation during complex sales cycles, and support proof-of-concept trials' },
     { from: 'engineering', to: 'marketing', desc: 'We validate technical accuracy of marketing claims and ensure demo environments are reliable for campaigns and events' },
+    { from: 'engineering', to: 'sales', desc: 'We maintain stable demo environments, provide technical validation during complex sales cycles, and support proof-of-concept trials' },
     { from: 'finance', to: 'sales', desc: 'We provide pricing approvals, guidance on contract terms, calculate sales commissions, and support deal structuring' },
     { from: 'finance', to: 'hr', desc: 'We process internal payroll for S4Labour employees, manage compensation guidelines, and coordinate on benefits administration' },
     { from: 'finance', to: 'marketing', desc: 'We allocate campaign budgets, set ROI tracking requirements, and approve marketing expenditure requests' },
@@ -543,21 +544,22 @@ var interactions = [
     { from: 'infrastructure', to: 'engineering', desc: 'We provide development environments, maintain deployment pipelines, and support the technical infrastructure Engineering relies on' },
     { from: 'infrastructure', to: 'testing', desc: 'We provision and maintain test environments, support data setup capabilities, and handle environment refresh requests' },
     { from: 'infrastructure', to: 'prof-services', desc: 'We handle client environment provisioning, database setup for new implementations, and manage system access for onboarding' },
-    { from: 'infrastructure', to: 'payroll', desc: 'We ensure database integrity, maintain system uptime during critical payroll processing windows, and manage data backups' },
     { from: 'infrastructure', to: 'marketing', desc: 'We host and maintain the s4labour.com website, ensure uptime, and optimise performance for visitor experience' },
     { from: 'infrastructure', to: 'product', desc: 'We provide infrastructure for analytics tools like Pendo and supply system performance data for product decisions' },
     { from: 'infrastructure', to: 'customer-success', desc: 'We maintain system stability and uptime, ensuring clients have a reliable platform that supports their operations' },
     { from: 'infrastructure', to: 'sales', desc: 'We ensure demo environment availability and system performance during prospect trials and evaluations' },
+    { from: 'infrastructure', to: 'payroll', desc: 'We ensure database integrity, maintain system uptime during critical payroll processing windows, and manage data backups' },
     { from: 'marketing', to: 'sales', desc: 'We generate and pass qualified leads from campaigns, events, and content marketing to the Sales team for follow-up' },
     { from: 'marketing', to: 'product', desc: 'We share market feedback, competitive intelligence, and customer pain points discovered through campaign interactions' },
     { from: 'marketing', to: 'prof-services', desc: 'We provide website traffic and lead volume forecasts to help Professional Services plan implementation capacity' },
-    { from: 'marketing', to: 'consulting', desc: 'We collaborate on thought leadership content and provide marketing materials for client presentations' },
     { from: 'marketing', to: 'hr', desc: 'We support employer brand development and provide recruitment marketing materials to attract top talent' },
+    { from: 'marketing', to: 'consulting', desc: 'We collaborate on thought leadership content and provide marketing materials for client presentations' },
     { from: 'payroll', to: 'customer-success', desc: 'We provide payroll status updates and resolution timelines so Customer Success can keep clients informed' },
     { from: 'payroll', to: 'product', desc: 'We flag data quality issues and system limitations that affect payroll accuracy, helping inform product improvements' },
     { from: 'payroll', to: 'engineering', desc: 'We report bugs and data issues that need fixing, particularly those affecting payroll accuracy and processing' },
     { from: 'payroll', to: 'finance', desc: 'We provide payroll service revenue data and client billing information for financial reporting' },
     { from: 'payroll', to: 'sales', desc: 'We clarify payroll service capabilities and limitations so Sales can set accurate expectations with prospects' },
+    { from: 'payroll', to: 'infrastructure', desc: 'We ensure database integrity, maintain system uptime during critical payroll processing windows, and manage data backups' },
     { from: 'product', to: 'engineering', desc: 'We provide clear feature specifications, acceptance criteria, and a prioritised backlog for development' },
     { from: 'product', to: 'marketing', desc: 'We share roadmap visibility, feature details for campaigns, technical accuracy reviews, and UI/UX assets' },
     { from: 'product', to: 'sales', desc: 'We provide product roadmap information, feature capabilities, and demo environments for sales conversations' },
@@ -573,10 +575,11 @@ var interactions = [
     { from: 'prof-services', to: 'marketing', desc: 'We help source customer success stories, implementation case studies, and testimonials for marketing use' },
     { from: 'sales', to: 'prof-services', desc: 'We hand over signed contracts with clear documentation of client expectations set during the sales process' },
     { from: 'sales', to: 'marketing', desc: 'We provide lead quality feedback, share competitive insights from sales conversations, and flag customer pain points' },
-    { from: 'sales', to: 'product', desc: 'We channel customer feature requests, share market demand signals, and provide competitive feature analysis' },
     { from: 'sales', to: 'finance', desc: 'We provide revenue forecasts, pipeline reports, and contract value projections for financial planning' },
     { from: 'sales', to: 'customer-success', desc: 'We hand over new client information and expectations set during sales to ensure a smooth transition' },
     { from: 'sales', to: 'consulting', desc: 'We identify and refer opportunities for consulting engagements with new or existing clients' },
+    { from: 'sales', to: 'product', desc: 'We channel customer feature requests, share market demand signals, and provide competitive feature analysis' },
+    { from: 'sales', to: 'engineering', desc: 'We maintain stable demo environments, provide technical validation during complex sales cycles, and support proof-of-concept trials' },
     { from: 'testing', to: 'engineering', desc: 'We identify bugs with detailed reproduction steps, validate fixes, and ensure quality before releases go live' },
     { from: 'testing', to: 'product', desc: 'We provide quality feedback, usability insights, and feature verification to help improve the product' },
     { from: 'testing', to: 'infrastructure', desc: 'We help distinguish application-level issues from infrastructure problems during testing and incidents' }
