--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
         
         /* Logo Side Animations */
         @keyframes floatLogo1 { 
-            0%, 100% { transform: translateY(0) rotate(0deg); opacity: 0.12; } 
-            50% { transform: translateY(-20px) rotate(5deg); opacity: 0.18; } 
+            0%, 100% { transform: translateY(0) rotate(0deg); } 
+            50% { transform: translateY(-20px) rotate(5deg); } 
         }
         @keyframes floatLogo2 { 
-            0%, 100% { transform: translateY(0) rotate(0deg); opacity: 0.1; } 
-            50% { transform: translateY(25px) rotate(-5deg); opacity: 0.15; } 
+            0%, 100% { transform: translateY(0) rotate(0deg); } 
+            50% { transform: translateY(25px) rotate(-5deg); } 
         }
         @keyframes floatLogo3 { 
-            0%, 100% { transform: translateY(0) rotate(-3deg); opacity: 0.08; } 
-            50% { transform: translateY(-15px) rotate(3deg); opacity: 0.14; } 
+            0%, 100% { transform: translateY(0) rotate(-3deg); } 
+            50% { transform: translateY(-15px) rotate(3deg); } 
+        }
+        @keyframes floatLogo4 { 
+            0%, 100% { transform: translateY(0) rotate(2deg); } 
+            50% { transform: translateY(20px) rotate(-4deg); } 
+        }
+        @keyframes floatLogo5 { 
+            0%, 100% { transform: translateY(0) rotate(-2deg); } 
+            50% { transform: translateY(-25px) rotate(6deg); } 
         }
 
         .logo-decorations {
@@ -46,18 +54,18 @@
         }
 
         /* Left side logos */
-        .logo-left-1 { width: 80px; left: 40px; top: 8%; animation: floatLogo1 12s ease-in-out infinite; }
-        .logo-left-2 { width: 60px; left: 80px; top: 28%; animation: floatLogo2 15s ease-in-out infinite; }
-        .logo-left-3 { width: 100px; left: 20px; top: 48%; animation: floatLogo3 10s ease-in-out infinite; }
-        .logo-left-4 { width: 70px; left: 70px; top: 68%; animation: floatLogo1 14s ease-in-out infinite; }
-        .logo-left-5 { width: 55px; left: 35px; top: 88%; animation: floatLogo2 11s ease-in-out infinite; }
+        .logo-left-1 { width: 140px; left: 30px; top: 8%; animation: floatLogo1 12s ease-in-out infinite; }
+        .logo-left-2 { width: 120px; left: 60px; top: 28%; animation: floatLogo2 15s ease-in-out infinite; }
+        .logo-left-3 { width: 150px; left: 20px; top: 48%; animation: floatLogo3 10s ease-in-out infinite; }
+        .logo-left-4 { width: 130px; left: 50px; top: 68%; animation: floatLogo4 14s ease-in-out infinite; }
+        .logo-left-5 { width: 110px; left: 35px; top: 88%; animation: floatLogo5 11s ease-in-out infinite; }
 
         /* Right side logos */
-        .logo-right-1 { width: 70px; right: 50px; top: 10%; animation: floatLogo2 14s ease-in-out infinite; }
-        .logo-right-2 { width: 90px; right: 30px; top: 30%; animation: floatLogo1 11s ease-in-out infinite; }
-        .logo-right-3 { width: 55px; right: 70px; top: 50%; animation: floatLogo3 13s ease-in-out infinite; }
-        .logo-right-4 { width: 80px; right: 40px; top: 70%; animation: floatLogo2 12s ease-in-out infinite; }
-        .logo-right-5 { width: 65px; right: 60px; top: 90%; animation: floatLogo1 15s ease-in-out infinite; }
+        .logo-right-1 { width: 130px; right: 40px; top: 10%; animation: floatLogo2 14s ease-in-out infinite; }
+        .logo-right-2 { width: 150px; right: 20px; top: 30%; animation: floatLogo1 11s ease-in-out infinite; }
+        .logo-right-3 { width: 120px; right: 50px; top: 50%; animation: floatLogo3 13s ease-in-out infinite; }
+        .logo-right-4 { width: 140px; right: 30px; top: 70%; animation: floatLogo4 12s ease-in-out infinite; }
+        .logo-right-5 { width: 125px; right: 45px; top: 90%; animation: floatLogo5 15s ease-in-out infinite; }
 
         /* Hide logos on smaller screens */
         @media (max-width: 1200px) {
